[workspace]
resolver = "2"
members = [
    "crates/env",
    "crates/env/derive",
    "crates/migrate",
    "crates/migrate/cli",
]

[workspace.lints.rust]
deprecated = "allow"

[workspace.lints.clippy]
derive_partial_eq_without_eq = "allow"
uninlined_format_args = "allow"
cast_possible_truncation = "warn"
unwrap_used = "deny"

[workspace.dependencies]
syn = "2.0.66"
quote = "1.0.36"
proc-macro2 = "1.0.85"

tracing = "0.1.40"

futures-util = "0.3.30"

regex = "1.10.4"

uuid = { version = "1.8.0", features = ["v4"] }

sqlx = "0.7.4"
serde = "1.0.203"
cargo_toml = "0.20.2"
topo_sort = "0.4.0"

heck = "0.5.0"
darling = "0.20.9"

anyhow = "1.0.86"
thiserror = "1.0.61"

ground-env = { path = "./crates/env", version = "0.1.0" }
ground-env-derive = { path = "./crates/env/derive", version = "0.1.0" }
ground-migrate = { path = "./crates/migrate", version = "0.1.0" }
ground-migrate-cli = { path = "./crates/migrate/cli", version = "0.1.0" }