[package]
name = "ground-commons"
version = "0.1.0"
edition = "2021"

[features]
default = []
cli-postgres = ["dep:sqlx", "dep:thiserror", "dep:tracing", "dep:secrecy"]
cli-service = []

clap = ["dep:clap"]
env = ["dep:ground-env"]

[dependencies]
clap = { workspace = true, optional = true }
ground-env = { workspace = true, optional = true}

tracing = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
secrecy = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true, features = ["postgres"] }

[lints]
workspace = true
