[package]
name = "ground-commons"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Jezza/ground"

[features]
default = []
tracing = [
    "dep:anyhow",
    "dep:tracing",
    "dep:tracing-log",
    "dep:tracing-subscriber",
]

[dependencies]
anyhow = { workspace = true, optional = true }

tracing = { workspace = true, optional = true }
tracing-log = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["env-filter", "json", "registry"] }

[lints]
workspace = true
