[package]
name = "ground-env"
version = "0.1.0"
edition = "2021"
description = "Parse env variables by defining a struct"
license = "MIT"
repository = "https://github.com/Jezza/ground"

[dependencies]
thiserror = "1.0.61"
ground-env-derive = { path = "./derive", version = "0.1.0" }

[lints]
workspace = true
