[package]
name = "ground-env-derive"
version = "0.2.0"
edition = "2021"
description = "The derive macro used by `ground-env` to generate the trait implementations."
license = "MIT"
repository = "https://github.com/Jezza/ground"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

heck = { workspace = true }
darling = { workspace = true }