[package]
name = "ground-env-derive"
version = "0.1.0"
edition = "2021"
description = "The derive macro used by `ground-env` to generate the trait implementations."
license = "MIT"
repository = "https://github.com/Jezza/ground"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.66"
quote = "1.0.36"
proc-macro2 = "1.0.85"

heck = "0.5.0"
darling = "0.20.9"